fixed the fs.writeFile and added all cards into the html

--- a/src/engineer.html
+++ b/src/engineer.html
@@ -2,9 +2,10 @@
             <div class="card">
                 <div class="card-info">
                   <h2 class="title">ENGINEER</h2>
-                  <h2>NAME: </h2>
-                  <p>ID: </p>
-                  <p>EMAIL:</p>
-                  <p>GITHUB ACCOUNT: </p>
+                  <h2>NAME: {{name}}</h2>
+                  <p>ID: {{id}}</p>
+                  <p> EMAIL: <a href="mailto:{{ email }}"> {{email}} </a></p>
+                  <p> GITHUB ACCOUNT: <a href="https://github.com/{{ github }}" target="_blank"> {{github}} </a> </p>
+                 
                 </div>
               </div>
