--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{teamTitle}}</title>
+    <title>{{teamTitle}} Team</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
@@ -18,6 +18,8 @@
           <div class="status">
             <h6>[ {{teamTitle}} ]</h6>
             <div class="team-desc">
+              <h4>THE PURPOSE OF THIS TEAM IS:</h4>
+              <br>
                 <p> 
                   {{teamDesc}}
                   </p>
@@ -39,5 +41,11 @@
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
+
+
+    
   </body>
+  <footer class="copyright">
+    &copy; 2021 All Rights Reserved | Website by Manuel Frayre 
+</footer>
 </html>
