--- a/src/intern.html
+++ b/src/intern.html
@@ -2,9 +2,9 @@
               <div class="card">
                 <div class="card-info">
                   <h2 class="title">INTERN</h2>
-                  <h2>NAME: </h2>
-                  <p>ID: </p>
-                  <p>EMAIL:</p>
-                  <p>SCHOOL: </p>
+                  <h2>NAME: {{name}}</h2>
+                  <p>ID: {{id}}</p>
+                  <<p> EMAIL: <a href="mailto:{{ email }}"> {{email}} </a></p>
+                  <p>SCHOOL: {{school}}</p>
                 </div>
               </div>
