Fixed layout and CSS, Added a new secgtion for Documents

--- a/src/engineer.html
+++ b/src/engineer.html
@@ -1,5 +1,5 @@
 
-            <div class="card">
+            <div class="egnineer-card">
                 <div class="card-info">
                   <h2 class="title">ENGINEER</h2>
                   <h2>NAME: {{name}}</h2>
