--- a/src/manager.html
+++ b/src/manager.html
@@ -1,10 +1,8 @@
 
     
-    <div class="card">
-        <!--     <div class="container emp-photo">
-                <img src="../assets/images/Michael_Scott.jpg" alt="">
-            </div> -->
-        <div class="container card-info">
+    <div class="manager-card">
+       
+        <div class="card-info">
             <h2 class="title">MANAGER</h2>
             <h2>NAME: {{name}}</h2>
             <p>ID: {{id}}</p>
