--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/nolan/64/call-of-duty-modern-warfare.png"/>
     <link rel="stylesheet" href="../assets/style.css" />
   </head>
   <body>
@@ -16,9 +17,13 @@
       <section class="glass">
         <div class="team">
           <div class="status">
-            <h6>[ {{teamTitle}} ]</h6>
+            <h6>[ {{teamTitle}} ]
+              <a href="https://manuelg139.github.io/Manuel-Frayre-Portfolio/" class="logo-link" target="_blank">
+                <img src="https://img.icons8.com/nolan/256/call-of-duty-modern-warfare.png" class="Logo" alt="COMPANY LOGO" />
+              </a>
+            </h6>
             <div class="team-desc">
-              <h4>THE PURPOSE OF THIS TEAM IS:</h4>
+              <h2 class="title">THE PURPOSE OF THIS TEAM IS:</h2>
               <br>
                 <p> 
                   {{teamDesc}}
@@ -33,6 +38,17 @@
             <!-- ! THIS IS FOR THE CARDS  -->
             {{cards}}
           </div>
+
+          
+
+          <div class="container">
+            <h1>DOCUMENTS</h1>
+
+              {{docCards}}
+           
+          </div>
+
+
         </div>
       </section>
 
